--- a/3rdparty/cmark-gfm/extensions/CMakeLists.txt
+++ b/3rdparty/cmark-gfm/extensions/CMakeLists.txt
@@ -61,7 +61,8 @@ if (CMARK_STATIC)
   if (MSVC)
     set_target_properties(${STATICLIBRARY} PROPERTIES
       OUTPUT_NAME "cmark-gfm-extensions_static"
-      VERSION ${PROJECT_VERSION})
+      VERSION ${PROJECT_VERSION}
+      MSVC_RUNTIME_LIBRARY MultiThreaded)
   else()
     set_target_properties(${STATICLIBRARY} PROPERTIES
       OUTPUT_NAME "cmark-gfm-extensions"
@@ -117,11 +118,6 @@ if(MSVC)
     string(REGEX REPLACE "/W[0-4]" "/W4" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
   else()
     set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /W4")
-  endif()
-  if(CMAKE_CXX_FLAGS MATCHES "/MD")
-    string(REGEX REPLACE "/MD" "/MT" CMAKE_C_FLAGS "${CMAKE_C_FLAGS}")
-  else()
-    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /MT")
   endif()
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} /WX /wd4706 /wd4204 /wd4221 /wd4100 /D_CRT_SECURE_NO_WARNINGS")
 elseif(CMAKE_COMPILER_IS_GNUCC OR "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
