--- a/3rdparty/cmark-gfm/CMakeLists.txt
+++ b/3rdparty/cmark-gfm/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 if (POLICY CMP0063)
     cmake_policy(SET CMP0063 NEW)
 endif()
+cmake_policy(SET CMP0091 NEW)
 project(cmark-gfm)
 
 set(PROJECT_VERSION_MAJOR 0)
