--- a/3rdparty/cmark-gfm/src/CMakeLists.txt
+++ b/3rdparty/cmark-gfm/src/CMakeLists.txt
@@ -1,5 +1,6 @@
 if(${CMAKE_VERSION} VERSION_GREATER "3.3")
     cmake_policy(SET CMP0063 NEW)
+    cmake_policy(SET CMP0091 NEW)
 endif()
 
 include(GNUInstallDirs)
