--- a/autotest/CMakeLists.txt
+++ b/autotest/CMakeLists.txt
@@ -6,9 +6,9 @@ cmake_minimum_required(VERSION 3.16)
 
 project(unittest VERSION 1.0.0 LANGUAGES CXX)
 
-add_subdirectory(asynctextwriter)
-add_subdirectory(bookmark)
-add_subdirectory(library)
-add_subdirectory(markdowneditor)
+#add_subdirectory(asynctextwriter)
+#add_subdirectory(bookmark)
+#add_subdirectory(library)
+#add_subdirectory(markdowneditor)
 
 enable_testing(true)
